syntax = "proto3";

package metricsgrpc;

import "google/protobuf/timestamp.proto";

option go_package = "/metrics";

service metrics {
  rpc PushBatch(PushBatchRequest) returns (PushBatchResponse) {}
  rpc GetBatch(GetBatchRequest) returns (GetBatchResponse) {}
}

message metric {
  string name = 1;
  bytes value = 2;
  google.protobuf.Timestamp localtime = 3;
  google.protobuf.Timestamp source_time = 4;
  string source_from_systems = 5;
  string relation_ci = 6;
  string uuid = 7;
}

message PushBatchRequest { repeated metric item = 1; }

message PushBatchResponse { string code = 1; }

message GetBatchRequest {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message GetBatchResponse {
  string code = 1;
  repeated metric item = 2;
}
